     release for 0.4.0). Use pip instead with --flavor embed option.

   * Default mode is embed now.

   * Update config path discovery : check for 'device_classes.xml'
     in /etc/openzwave/, /usr/local/etc/openzwave/ and finally in
     ozw_config in python_openzwave module.

   * Add flavor : different ways of building and installing
     openzwave / python_openzwave.

python-openzwave 0.3.3:

   * Openzwave update

   * Update values getter in nodes. See #70

   * Fix setvalue for string types in python3

python-openzwave 0.3.2:

   * Openzwave update

   * Add thermostat

   * Add patch from https://github.com/ebisso/python-
     openzwave/commit/8776daccc730cb5d7f71a178e9e0cc1d191ad115

   * Can compile dynamically

python-openzwave 0.3.1:

   * Fix bugs and openzwave update

python-openzwave 0.3.0:

   * Fix bugs and openzwave update

python-openzwave 0.3.0-beta8:

   * Add multi instance support

   * Update GROUP notification : please update your code to add the
     new parameter

   * Update VALUE_REMOVED notification : please update your code to
     add the new parameter

   * Improve unicode : you may need to delete your old config file

   * Add Python 3 support

   * Improve controllers_command : add a lock and a way to retrieve
     current status

   * Add support for RGB bulbs

python-openzwave 0.3.0-beta3:

   * Add security rewrite support. See
     https://groups.google.com/foru
     m/#!msg/openzwave/cPjrvJJaESY/toK7QxEgRn0J

   * Add 2 signals for controller commands :
     ZWaveNetwork.SIGNAL_CONTROLLER_COMMAND and
     ZWaveNetwork.SIGNAL_CONTROLLER_WAITING

   * Mark old methods and signals as deprecated. It is strongly
     recommended to use the new schema.

   * Add tests for controller commands.

   * Update isNodeAwake from function to property

   * Rename methods from node to be python compliant : is_awake,
     is_failed, is_ready, query_stage, is_info_received

   * Add facilities to run controller commands directly from node
