@@ -423,12 +423,41 @@ tag:
 	@echo "Tag pushed on github."
 
 validate-pr: uninstall clean update develop
+	@echo '////////////////////////////////////////////////////////////////////////////////////////////'
+	@echo '\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\'
+	@echo '////////////////////////////////////////////////////////////////////////////////////////////'
+	@echo
+	@echo
+	@echo "Tests to validate a PR"
+	@echo
+	@echo
+
 	$(MAKE) venv-dev-autobuild-tests
 	$(MAKE) venv-bdist_wheel-whl-autobuild-tests 
 	$(MAKE) venv-bdist_wheel-autobuild-tests
 #~ 	$(MAKE) venv-tests
 
+	@echo
+	@echo
+	@echo "Tests to validate a PR finished"
+	@echo
+	@echo
+	@echo '////////////////////////////////////////////////////////////////////////////////////////////'
+	@echo '\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\'
+	@echo '////////////////////////////////////////////////////////////////////////////////////////////'
+	@echo
+
 new-version: validate-pr
+	@echo '////////////////////////////////////////////////////////////////////////////////////////////'
+	@echo '\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\'
+	@echo '////////////////////////////////////////////////////////////////////////////////////////////'
+	@echo '\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\'
+	@echo
+	@echo
+	@echo "Make a new version ${python_openzwave_version}"
+	@echo
+	@echo
+
 	-$(MAKE) docs
 	-git commit -m "Auto-commit for new-version" README.rst INSTALL_REPO.rst INSTALL_MAC.rst INSTALL_WIN.rst INSTALL_ARCH.rst LICENSE.txt COPYRIGHT.txt DEVEL.txt EXAMPLES.txt CHANGELOG.txt docs/
 	-git checkout $(ARCHIVES)/
@@ -442,8 +471,17 @@ new-version: validate-pr
 	-twine upload archives/python_openzwave-${python_openzwave_version}.zip -r pypi
 	-$(MAKE) tag
 	-$(MAKE) commit
+
+	@echo
 	@echo
 	@echo "New version ${python_openzwave_version} created and published"
+	@echo
+	@echo
+	@echo '\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\'
+	@echo '////////////////////////////////////////////////////////////////////////////////////////////'
+	@echo '\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\'
+	@echo '////////////////////////////////////////////////////////////////////////////////////////////'
+	@echo
 
 debch:
 	dch --newversion ${python_openzwave_version} --maintmaint "Automatic release from upstream"
@@ -462,9 +500,7 @@ venv2:
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
 	@echo
-	@echo
 	@echo "New venv for python2"
-	@echo
 	@echo
 
 	virtualenv --python=python2 venv2
@@ -475,9 +511,7 @@ venv2:
 	-rm -f src-lib/libopenzwave/libopenzwave.cpp
 
 	@echo
-	@echo
 	@echo "Venv for python2 created"
-	@echo
 	@echo
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
@@ -487,9 +521,7 @@ venv3:
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
 	@echo
-	@echo
 	@echo "New venv for python3"
-	@echo
 	@echo
 
 	virtualenv --python=python3 venv3
@@ -500,9 +532,7 @@ venv3:
 	-rm -f src-lib/libopenzwave/libopenzwave.cpp
 
 	@echo
-	@echo
 	@echo "Venv for python3 created"
-	@echo
 	@echo
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
@@ -636,6 +666,7 @@ venv-git-autobuild-tests: venv-clean venv2 venv3
 	venv2/bin/python setup-lib.py install --flavor=git
 	venv2/bin/python setup-api.py install
 	venv2/bin/nosetests --verbose tests/lib/autobuild tests/api/autobuild
+	venv2/bin/python  venv2/bin/pyozw_check	
 
 	@echo
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
@@ -648,6 +679,7 @@ venv-git-autobuild-tests: venv-clean venv2 venv3
 	venv3/bin/python setup-lib.py install --flavor=git
 	venv3/bin/python setup-api.py install
 	venv3/bin/nosetests --verbose tests/lib/autobuild tests/api/autobuild
+	venv3/bin/python  venv3/bin/pyozw_check	
 
 	@echo
 	@echo
@@ -858,6 +890,7 @@ venv-embed-autobuild-tests: venv-clean venv2 venv3
 	venv2/bin/python setup.py install --flavor=embed
 	venv2/bin/nosetests --verbose tests/lib/autobuild tests/api/autobuild tests/manager/autobuild
 	test -f venv2/lib/python*/site-packages/libopenzwave*.so
+	venv2/bin/python  venv2/bin/pyozw_check	
 
 	@echo
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
@@ -874,6 +907,7 @@ venv-embed-autobuild-tests: venv-clean venv2 venv3
 	venv3/bin/python setup.py install --flavor=embed
 	venv3/bin/nosetests --verbose tests/lib/autobuild tests/api/autobuild tests/manager/autobuild
 	test -f venv3/lib/python*/site-packages/libopenzwave*.so
+	venv3/bin/python  venv3/bin/pyozw_check	
 
 	-rm -f libopenzwave*.so
 	@echo
@@ -906,6 +940,7 @@ venv-embed_shared-autobuild-tests: venv-clean venv2 venv3
 	venv2/bin/python setup.py install --flavor=embed_shared
 	venv2/bin/nosetests --verbose tests/lib/autobuild tests/api/autobuild tests/manager/autobuild
 	test -f venv2/lib/python*/site-packages/libopenzwave*.so
+	venv2/bin/python  venv2/bin/pyozw_check	
 
 	@echo
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
@@ -921,6 +956,7 @@ venv-embed_shared-autobuild-tests: venv-clean venv2 venv3
 	venv3/bin/python setup.py install --flavor=embed_shared
 	venv3/bin/nosetests --verbose tests/lib/autobuild tests/api/autobuild tests/manager/autobuild
 	test -f venv3/lib/python*/site-packages/libopenzwave*.so
+	venv3/bin/python  venv3/bin/pyozw_check	
 
 	-rm -f libopenzwave*.so
 	@echo
@@ -1145,13 +1181,15 @@ venv-dev-autobuild-tests: venv-clean venv2 venv3 src-lib/libopenzwave/libopenzwa
 	@echo
 
 	-rm -f libopenzwave*.so
+	#PIP like
+	venv2/bin/python2 -u -c "import setuptools, tokenize;__file__='setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" install --record /tmp/install-record.txt --single-version-externally-managed --compile --install-headers venv2/include/site/python2.7/python-openzwave "--flavor=git"
+
+	rm -f src-lib/libopenzwave/libopenzwave.cpp
 	venv2/bin/python setup-lib.py install --flavor=dev
 	venv2/bin/python setup-api.py install
 	venv2/bin/python setup-manager.py install
 	venv2/bin/nosetests --verbose tests/lib/autobuild tests/api/autobuild tests/manager/autobuild
 	venv2/bin/python  venv2/bin/pyozw_check	
-
-	venv2/bin/python2 -u -c "import setuptools, tokenize;__file__='setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" install --record /tmp/install-record.txt --single-version-externally-managed --compile --install-headers venv2/include/site/python2.7/python-openzwave "--flavor=git"
 
 	@echo
 	@echo ////////////////////////////////////////////////////////////////////////////////////////////
@@ -1162,14 +1200,17 @@ venv-dev-autobuild-tests: venv-clean venv2 venv3 src-lib/libopenzwave/libopenzwa
 	@echo
 
 	-rm -f libopenzwave*.so
+
+	#PIP like
+	venv3/bin/python3 -u -c "import setuptools, tokenize;__file__='setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" install --record /tmp/install-record.txt --single-version-externally-managed --compile --install-headers venv3/include/site/python3.5/python-openzwave "--flavor=git"
+
+	rm -f src-lib/libopenzwave/libopenzwave.cpp
 	venv3/bin/python setup-lib.py install --flavor=dev
 	venv3/bin/python setup-api.py install
 #~ 	venv3/bin/python setup-manager.py install
 	venv3/bin/nosetests --verbose tests/lib/autobuild tests/api/autobuild
 	venv3/bin/python  venv3/bin/pyozw_check	
 	
-	venv3/bin/python3 -u -c "import setuptools, tokenize;__file__='setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" install --record /tmp/install-record.txt --single-version-externally-managed --compile --install-headers venv3/include/site/python3.5/python-openzwave "--flavor=git"
-
 	-rm -f libopenzwave*.so
 	@echo
 	@echo
