@@ -1,0 +1,3 @@
+README.rst
+LICENSE.txt
+CHANGELOG.txt
