@@ -1,31 +1,14 @@
-#!/usr/bin/make -f
- 
-# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
-DPKG_EXPORT_BUILDFLAGS = 1
-include /usr/share/dpkg/default.mk
- 
-# Don't set this or else the .install files will fail
-#export PYBUILD_NAME = vdns
-export PYBUILD_SYSTEM = custom
- 
-# Otherwise the usr/bin/vdns.py file is from python2
-#~ export PYBUILD_INSTALL_ARGS_python2 = --install-scripts=/dev/null
-#~ export PYBUILD_SYSTEM=distutils
- 
-export PYBUILD_NAME=openzwave
- 
-# main packaging script based on dh7 syntax
-%:
-	dh $@ --with python3,python2 --buildsystem=pybuild
+#! /usr/bin/make -f
 
-#~ export PYBUILD_BUILD_ARGS=rm -f src-lib/libopenzwave/libopenzwave.cpp && python{version} setup-lib.py build --debian-package
+#export DH_VERBOSE = 1
+export PYBUILD_NAME = openzwave
 
-export PYBUILD_INSTALL_ARGS=rm -f src-lib/libopenzwave/libopenzwave.cpp && python{version} setup-lib.py install --debian-package --install-layout=deb --root=debian/python-openzwave && python{version} setup-api.py install --debian-package --install-layout=deb --root=debian/python-openzwave && python{version} setup-manager.py install --debian-package --install-layout=deb --root=debian/python-openzwave
+export PYBUILD_INSTALL_ARGS=--flavor=shared
 
 override_dh_auto_clean:
 	make clean
 	-rm -rf venv*
-	-rm -rf openzwave
+	-rm -rf openzwave*
 	-rm -rf dist
 	-rm -rf dists
 	-rm -rf archives
@@ -35,23 +18,6 @@ override_dh_auto_build:
 override_dh_auto_configure:
 	
 override_dh_auto_test:
-	
 
-#~ 	python setup-lib.py develop --debian-package
-#~ 	python setup-api.py develop --debian-package
-#~ 	python setup-manager.py develop --debian-package
-#~ 	python setup-web.py develop --debian-package
-#~ 	cd docs && make html
-#~ 	cd docs && make text
-#~ 	python setup-lib.py develop --uninstall
-#~ 	python setup-api.py develop --uninstall
-#~ 	python setup-manager.py develop --uninstall
-#~ 	python setup-web.py develop --uninstall
-
-#~ export PYBUILD_SYSTEM=custom
-#~ export PYBUILD_CLEAN_ARGS=make clean
-#~ export PYBUILD_CONFIGURE_ARGS=./configure --python={version}
-#~ export PYBUILD_BUILD_ARGS=make build --dir={build_dir} --python={version}
-#~ export PYBUILD_INSTALL_ARGS=make --destdir={destdir} --python={version} --install-dir={install_dir}
-#~ export PYBUILD_TEST_ARGS_python2=cd {build_dir}; nosetests
-#~ export PYBUILD_TEST_ARGS_python3=cd {build_dir}; python{version} -m discover
+%:
+	dh $@ --with python2,python3 --buildsystem=pybuild
