@@ -95,4 +95,5 @@ setup(
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
     ],
+
 )
