@@ -6,3 +6,11 @@
 #ifndef PY_LIB_VERSION
 #define PY_LIB_VERSION_STRING STR_VALUE("Undef")
 #endif
+#ifdef PY_LIB_FLAVOR
+#define PY_LIB_FLAVOR_STRING STR_VALUE(PY_LIB_FLAVOR)
+#endif
+#ifndef PY_LIB_FLAVOR
+#define PY_LIB_FLAVOR_STRING STR_VALUE("Undef")
+#endif
+#define PY_LIB_DATE_STRING __DATE__
+#define PY_LIB_TIME_STRING __TIME__
